--- a/login.html
+++ b/login.html
@@ -1,4 +1,5 @@
-<!DOCTYPE html><html lang="ar" dir="rtl">
+<!DOCTYPE html>
+<html lang="ar" dir="rtl">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
@@ -39,6 +40,7 @@
       border-radius: 6px;
       border: 1px solid #999;
       font-size: 14px;
+      cursor: pointer;
     }
     .container {
       flex: 1;
@@ -51,22 +53,35 @@
       background-color: #fff;
       padding: 30px;
       border-radius: 12px;
-      box-shadow: 0 0 15px rgba(0,0,0,0.1);
+      box-shadow: 0 0 20px rgba(0,0,0,0.15);
       width: 100%;
       max-width: 400px;
     }
     .login-box h2 {
       text-align: center;
-      margin-bottom: 20px;
+      margin-bottom: 25px;
       color: #663399;
+    }
+    .input-group {
+      position: relative;
+      margin: 12px 0;
     }
     .login-box input {
       width: 100%;
-      padding: 12px;
-      margin: 10px 0;
+      padding: 12px 40px 12px 12px;
       border: 1px solid #ccc;
       border-radius: 8px;
       font-size: 16px;
+      outline: none;
+    }
+    .input-group .toggle-password {
+      position: absolute;
+      top: 50%;
+      right: 12px;
+      transform: translateY(-50%);
+      cursor: pointer;
+      font-size: 18px;
+      color: #666;
     }
     .login-box button {
       width: 100%;
@@ -77,6 +92,10 @@
       border-radius: 8px;
       font-size: 16px;
       cursor: pointer;
+      transition: 0.3s;
+    }
+    .login-box button:hover {
+      background-color: #a17ccf;
     }
     .login-box a {
       display: block;
@@ -84,6 +103,10 @@
       margin-top: 15px;
       color: #663399;
       text-decoration: none;
+      transition: 0.3s;
+    }
+    .login-box a:hover {
+      text-decoration: underline;
     }
     .alert {
       text-align: center;
@@ -118,25 +141,42 @@
         <option value="en">🇺🇸 English</option>
       </select>
     </div>
-  </header>  <div class="container">
+  </header>
+
+  <div class="container">
     <div class="login-box">
       <h2 id="loginTitle">تسجيل الدخول</h2>
       <div id="alertBox" class="alert" style="display:none;">يجب تسجيل الدخول أولًا لتأكيد الطلب</div>
-      <input type="email" id="email" placeholder="البريد الإلكتروني">
-      <input type="password" id="password" placeholder="كلمة المرور">
+
+      <div class="input-group">
+        <input type="email" id="email" placeholder="البريد الإلكتروني">
+      </div>
+      <div class="input-group">
+        <input type="password" id="password" placeholder="كلمة المرور">
+        <span class="toggle-password" onclick="togglePassword('password')">&#128065;</span>
+      </div>
+      <div class="input-group">
+        <input type="password" id="confirmPassword" placeholder="تأكيد كلمة المرور">
+        <span class="toggle-password" onclick="togglePassword('confirmPassword')">&#128065;</span>
+      </div>
+
       <button onclick="loginUser()" id="loginBtn">تسجيل الدخول</button>
       <a href="register.html" id="registerLink">إنشاء حساب جديد</a>
     </div>
-  </div>  <div class="footer" id="customerService">
+  </div>
+
+  <div class="footer" id="customerService">
     خدمة العملاء:<br>
     <a href="mailto:jojoshopsuppor@gmail.com">jojoshopsuppor@gmail.com</a><br>
-    واتساب: <a href="https://wa.me/20115087664">20115087664</a>
-  </div>  <script>
+    واتساب: <a href="https://wa.me/201150877664">201150877664</a>
+  </div>
+
+  <script>
     const firebaseConfig = {
       apiKey: "AIzaSyCmLlBbnKNNCA53x3SeLnCI7e3A89CxHao",
       authDomain: "jojo-shop-4d843.firebaseapp.com",
       projectId: "jojo-shop-4d843",
-      storageBucket: "jojo-shop-4d843.firebasestorage.app",
+      storageBucket: "jojo-shop-4d843.appspot.com",
       messagingSenderId: "763306332375",
       appId: "1:763306332375:web:732db30b0234d0906a2092",
       measurementId: "G-E73QP19185"
@@ -151,8 +191,19 @@
     }
 
     function loginUser() {
-      const email = document.getElementById("email").value;
+      const email = document.getElementById("email").value.trim();
       const password = document.getElementById("password").value;
+      const confirmPassword = document.getElementById("confirmPassword").value;
+
+      if (!email || !password) {
+        alert("يرجى ملء جميع الحقول.");
+        return;
+      }
+
+      if (confirmPassword && password !== confirmPassword) {
+        alert("كلمة المرور وتأكيدها غير متطابقين.");
+        return;
+      }
 
       firebase.auth().signInWithEmailAndPassword(email, password)
         .then((userCredential) => {
@@ -167,6 +218,11 @@
         });
     }
 
+    function togglePassword(id) {
+      const input = document.getElementById(id);
+      input.type = input.type === "password" ? "text" : "password";
+    }
+
     function switchLanguage(lang) {
       const body = document.body;
       if (lang === "en") {
@@ -176,15 +232,14 @@
         document.getElementById("loginTitle").textContent = "Login";
         document.getElementById("email").placeholder = "Email";
         document.getElementById("password").placeholder = "Password";
+        document.getElementById("confirmPassword").placeholder = "Confirm Password";
         document.getElementById("loginBtn").textContent = "Login";
         document.getElementById("registerLink").textContent = "Create New Account";
-        if (from === 'cart') {
-          document.getElementById("alertBox").textContent = "You must log in first to complete the order";
-        }
+        if (from === 'cart') document.getElementById("alertBox").textContent = "You must log in first to complete the order";
         document.getElementById("customerService").innerHTML = `
           Customer Support:<br>
           <a href="mailto:jojoshopsuppor@gmail.com">jojoshopsuppor@gmail.com</a><br>
-          WhatsApp: <a href="https://wa.me/20115087664">20115087664</a>
+          WhatsApp: <a href="https://wa.me/201150877664">201150877664</a>
         `;
       } else {
         body.setAttribute("dir", "rtl");
@@ -193,17 +248,17 @@
         document.getElementById("loginTitle").textContent = "تسجيل الدخول";
         document.getElementById("email").placeholder = "البريد الإلكتروني";
         document.getElementById("password").placeholder = "كلمة المرور";
+        document.getElementById("confirmPassword").placeholder = "تأكيد كلمة المرور";
         document.getElementById("loginBtn").textContent = "تسجيل الدخول";
         document.getElementById("registerLink").textContent = "إنشاء حساب جديد";
-        if (from === 'cart') {
-          document.getElementById("alertBox").textContent = "يجب تسجيل الدخول أولًا لتأكيد الطلب";
-        }
+        if (from === 'cart') document.getElementById("alertBox").textContent = "يجب تسجيل الدخول أولًا لتأكيد الطلب";
         document.getElementById("customerService").innerHTML = `
           خدمة العملاء:<br>
           <a href="mailto:jojoshopsuppor@gmail.com">jojoshopsuppor@gmail.com</a><br>
-          واتساب: <a href="https://wa.me/20115087664">20115087664</a>
+          واتساب: <a href="https://wa.me/201150877664">201150877664</a>
         `;
       }
     }
-  </script></body>
+  </script>
+</body>
 </html>
